force-app/main/default/objects/Lead/fields/PE_PC_Relationship_To_Deceased__c.field-meta.xml
<CustomField>
    <fullName>PE_PC_Relationship_To_Deceased__c</fullName>
    <label>PC Relationship to Deceased</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>