force-app/main/default/objects/Lead/fields/PE_Personal_Rep_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>PE_Personal_Rep_Appointment_Date__c</fullName>
    <label>Personal Rep Appointment Date</label>
    <type>Date</type>
</CustomField>