force-app/main/default/objects/Lead/fields/PE_Personal_Representative_Name__c.field-meta.xml
<CustomField>
    <fullName>PE_Personal_Representative_Name__c</fullName>
    <label>Personal Representative (Executor) Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>