force-app/main/default/objects/Lead/fields/PE_Probate_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>PE_Probate_Case_Number__c</fullName>
    <label>Probate Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>