force-app/main/default/objects/Lead/fields/PE_Probate_Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>PE_Probate_Case_Stage__c</fullName>
    <label>Probate Case Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>Petition pending</fullName>
            </value>
            <value>
                <fullName>Administration stage</fullName>
            </value>
            <value>
                <fullName>Distribution stage</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>