force-app/main/default/objects/Lead/fields/PE_Real_Estate_Addresses__c.field-meta.xml
<CustomField>
    <fullName>PE_Real_Estate_Addresses__c</fullName>
    <label>Real Estate Addresses (Decedent)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>