force-app/main/default/objects/Lead/fields/PE_Real_Estate_Deed_Names__c.field-meta.xml
<CustomField>
    <fullName>PE_Real_Estate_Deed_Names__c</fullName>
    <label>Real Estate Deed Name(s)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>