force-app/main/default/objects/Lead/fields/Phone_Digits__c.field-meta.xml
<CustomField>
    <fullName>Phone_Digits__c</fullName>
    <formula>IF(
  ISBLANK(Phone),
  &quot;&quot;,
  /* CLEAN = digits with punctuation removed */
  IF(
    LEN(
      SUBSTITUTE(
        SUBSTITUTE(
          SUBSTITUTE(
            SUBSTITUTE(
              SUBSTITUTE(
                SUBSTITUTE(
                  SUBSTITUTE(
                    SUBSTITUTE(Phone,&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),
                  &quot;-&quot;,&quot;&quot;),
                &quot; &quot;,&quot;&quot;),
              &quot;.&quot;,&quot;&quot;),
            &quot;+&quot;,&quot;&quot;),
          &quot;x&quot;,&quot;&quot;),
        &quot;X&quot;,&quot;&quot;)
    ) = 10,
    /* If 10 digits, add leading 1 */
    &quot;1&quot; &amp;
    SUBSTITUTE(
      SUBSTITUTE(
        SUBSTITUTE(
          SUBSTITUTE(
            SUBSTITUTE(
              SUBSTITUTE(
                SUBSTITUTE(
                  SUBSTITUTE(Phone,&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),
                &quot;-&quot;,&quot;&quot;),
              &quot; &quot;,&quot;&quot;),
            &quot;.&quot;,&quot;&quot;),
          &quot;+&quot;,&quot;&quot;),
        &quot;x&quot;,&quot;&quot;),
      &quot;X&quot;,&quot;&quot;),
    /* Else keep as-is */
    SUBSTITUTE(
      SUBSTITUTE(
        SUBSTITUTE(
          SUBSTITUTE(
            SUBSTITUTE(
              SUBSTITUTE(
                SUBSTITUTE(
                  SUBSTITUTE(Phone,&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),
                &quot;-&quot;,&quot;&quot;),
              &quot; &quot;,&quot;&quot;),
            &quot;.&quot;,&quot;&quot;),
          &quot;+&quot;,&quot;&quot;),
        &quot;x&quot;,&quot;&quot;),
      &quot;X&quot;,&quot;&quot;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Digits</label>
    <type>Text</type>
</CustomField>