force-app/main/default/objects/Lead/fields/Post_Con_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Con_Completed_Date__c</fullName>
    <inlineHelpText>Date that the post-con was completed. Set automatically</inlineHelpText>
    <label>Post Con Completed Date</label>
    <type>Date</type>
</CustomField>