force-app/main/default/objects/Lead/fields/Post_Consult_Complete__c.field-meta.xml
<CustomField>
    <fullName>Post_Consult_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Consult Complete</label>
    <type>Checkbox</type>
</CustomField>