force-app/main/default/objects/Lead/fields/Potential_institutional_client__c.field-meta.xml
<CustomField>
    <fullName>Potential_institutional_client__c</fullName>
    <label>Potential institutional client?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>