force-app/main/default/objects/Lead/fields/Practice_Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Practice_Sub_Area__c</fullName>
    <label>Practice Sub Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADA Violations</fullName>
            </value>
            <value>
                <fullName>Agreement (Employee)</fullName>
            </value>
            <value>
                <fullName>Agreement (parenting plan)</fullName>
            </value>
            <value>
                <fullName>Agreement (retraction or settlement)</fullName>
            </value>
            <value>
                <fullName>Agreement (rule amendments)</fullName>
            </value>
            <value>
                <fullName>Agreement (settlement drafting)</fullName>
            </value>
            <value>
                <fullName>Agreement (visa, green card applications)</fullName>
            </value>
            <value>
                <fullName>Area Types: Contested ∣ Uncontested</fullName>
            </value>
            <value>
                <fullName>Assault</fullName>
            </value>
            <value>
                <fullName>Assets (recovery of rents or profits)</fullName>
            </value>
            <value>
                <fullName>Cease and Desist</fullName>
            </value>
            <value>
                <fullName>Cease and Desist (retaliation)</fullName>
            </value>
            <value>
                <fullName>Cease and Desist (unauthorized use, trespass, nuisance)</fullName>
            </value>
            <value>
                <fullName>Child Custody</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Contract / Purchase &amp; Sale (drafting or review of purchase agreements)</fullName>
            </value>
            <value>
                <fullName>Contract (policy review)</fullName>
            </value>
            <value>
                <fullName>Contract (review)</fullName>
            </value>
            <value>
                <fullName>Deed (CC&amp;R compliance)</fullName>
            </value>
            <value>
                <fullName>Deed (preparing or reviewing warranty, quitclaim deeds)</fullName>
            </value>
            <value>
                <fullName>Demand Letter</fullName>
            </value>
            <value>
                <fullName>Demand Letter (assessment enforcement)</fullName>
            </value>
            <value>
                <fullName>Demand Letter (coverage dispute)</fullName>
            </value>
            <value>
                <fullName>Demand Letter (e.g. tenant rent demand, seller disclosure issues)</fullName>
            </value>
            <value>
                <fullName>Demand Letter (rent, repairs)</fullName>
            </value>
            <value>
                <fullName>Demand Letter (support or custody proposals)</fullName>
            </value>
            <value>
                <fullName>Demand Letter (wage, wrongful termination)</fullName>
            </value>
            <value>
                <fullName>Deposit / Rent terms</fullName>
            </value>
            <value>
                <fullName>DHS (child protection screening)</fullName>
            </value>
            <value>
                <fullName>Discrimination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>