force-app/main/default/objects/Lead/fields/Preferred_Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Office_Location__c</fullName>
    <label>Preferred Office Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>