force-app/main/default/objects/Lead/fields/Previous_Attorney_Office_Assisted__c.field-meta.xml
<CustomField>
    <fullName>Previous_Attorney_Office_Assisted__c</fullName>
    <label>Previous Attorney/Office Assisted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>