force-app/main/default/objects/Lead/fields/Prior_Attorney_Cost_Specify__c.field-meta.xml
<CustomField>
    <fullName>Prior_Attorney_Cost_Specify__c</fullName>
    <label>Prior Attorney Cost (Specify)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>