force-app/main/default/objects/Lead/fields/Prior_Attorney_Name_Firm__c.field-meta.xml
<CustomField>
    <fullName>Prior_Attorney_Name_Firm__c</fullName>
    <label>Prior Attorney Name and Firm</label>
    <type>TextArea</type>
</CustomField>