force-app/main/default/objects/Lead/fields/Prior_Attorney_Reason_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>Prior_Attorney_Reason_Other_Specify__c</fullName>
    <label>Prior Attorney Reason Other (Specify)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>