force-app/main/default/objects/Lead/fields/Probate_Estate_Already_Opened__c.field-meta.xml
<CustomField>
    <fullName>Probate_Estate_Already_Opened__c</fullName>
    <label>Probate Estate Already Opened?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>