force-app/main/default/objects/Lead/fields/Reason_for_seeking_new_attorney__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_seeking_new_attorney__c</fullName>
    <label>Reason for seeking new attorney</label>
    <type>TextArea</type>
</CustomField>