force-app/main/default/objects/Lead/fields/Reason_No_Hire_Prior_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Reason_No_Hire_Prior_Attorney__c</fullName>
    <label>Why didn’t you hire prior attorney?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Lack of experience in this area of law</fullName>
            </value>
            <value>
                <fullName>Poor communication</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>