force-app/main/default/objects/Lead/fields/Receiving_Support_Services_Check_all__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Support_Services_Check_all__c</fullName>
    <label>Receiving Support Services (Check all)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Child protection services</fullName>
            </value>
            <value>
                <fullName>Domestic violence shelter</fullName>
            </value>
            <value>
                <fullName>Legal aid services</fullName>
            </value>
            <value>
                <fullName>Medical treatment or health services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Therapy or counseling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>