force-app/main/default/objects/Lead/fields/Represented_Other_Parties_In_Case__c.field-meta.xml
<CustomField>
    <fullName>Represented_Other_Parties_In_Case__c</fullName>
    <label>Have we represented other parties</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>