force-app/main/default/objects/Lead/fields/Require_Appointment_Accommodations__c.field-meta.xml
<CustomField>
    <fullName>Require_Appointment_Accommodations__c</fullName>
    <label>Require accommodations for appointments?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>