force-app/main/default/objects/Lead/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <label>Scope of Work</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>