force-app/main/default/objects/Lead/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>The source pulled from Call Rails</inlineHelpText>
    <label>Source</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>