force-app/main/default/objects/Lead/fields/Source_Is_Blank__c.field-meta.xml
<CustomField>
    <fullName>Source_Is_Blank__c</fullName>
    <formula>ISBLANK(Lead_Source_Details__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Is Blank</label>
    <type>Checkbox</type>
</CustomField>