force-app/main/default/objects/Lead/fields/Special_Follow_Up_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Follow_Up_Instructions__c</fullName>
    <label>Special Follow Up Instructions?</label>
    <type>TextArea</type>
</CustomField>