force-app/main/default/objects/Lead/fields/Specific_Availability_Times_Days__c.field-meta.xml
<CustomField>
    <fullName>Specific_Availability_Times_Days__c</fullName>
    <label>Specific Availability (Times/Days)</label>
    <type>TextArea</type>
</CustomField>