force-app/main/default/objects/Lead/fields/Spoken_With_Other_Attorneys__c.field-meta.xml
<CustomField>
    <fullName>Spoken_With_Other_Attorneys__c</fullName>
    <label>Spoken with other attorneys</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>