force-app/main/default/objects/Lead/fields/SQL__c.field-meta.xml
<CustomField>
    <fullName>SQL__c</fullName>
    <formula>AND(
  NOT(CONTAINS(TEXT(LeadSource), &quot;referral&quot;)),
  OR(
    AND(
      NOT(ISPICKVAL(Status, &quot;New&quot;)),
      NOT(ISPICKVAL(Status, &quot;Working&quot;)),
      NOT(ISPICKVAL(Status, &quot;Unqualified&quot;))
    ),
    AND(
      NOT(ISPICKVAL(Status, &quot;New&quot;)),
      OR(
										Hired_Another_Firm__c = TRUE,
						    ISPICKVAL(Disqualified_Reason__c, &quot;Firm Availability&quot;),
										ISPICKVAL(Disqualified_Reason__c, &quot;Already Hired Another Firm&quot;)
						)
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SQL</label>
    <type>Checkbox</type>
</CustomField>