force-app/main/default/objects/Lead/fields/Standard_Trust_Amount__c.field-meta.xml
<CustomField>
    <fullName>Standard_Trust_Amount__c</fullName>
    <label>Standard Trust Amount (if Evergreen)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>