force-app/main/default/objects/Lead/fields/State_AI__c.field-meta.xml
<CustomField>
    <fullName>State_AI__c</fullName>
    <label>State (AI)</label>
    <type>TextArea</type>
</CustomField>