force-app/main/default/objects/Lead/fields/Supervising_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Supervising_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>