force-app/main/default/objects/Lead/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team Carl</fullName>
            </value>
            <value>
                <fullName>Team Dillon</fullName>
            </value>
            <value>
                <fullName>Team Tyler</fullName>
            </value>
            <value>
                <fullName>Team Brian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>