force-app/main/default/objects/Lead/fields/Total_Retainer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Retainer_Amount__c</fullName>
    <formula>IF(
				 Initial_Retainer_Evergreen_Hr_Rate__c &gt; 0  ||  Flat_Rate_Retainer_if_Flat_Rate__c &gt; 0,
				Initial_Retainer_Evergreen_Hr_Rate__c + Flat_Rate_Retainer_if_Flat_Rate__c,
				0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Retainer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>