force-app/main/default/objects/Lead/fields/Type_of_Law__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Law__c</fullName>
    <label>Type of Law</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Law</valueSetName>
    </valueSet>
</CustomField>