force-app/main/default/objects/Lead/fields/Urgency_AI__c.field-meta.xml
<CustomField>
    <fullName>Urgency_AI__c</fullName>
    <label>Urgency (AI)</label>
    <type>TextArea</type>
</CustomField>