force-app/main/default/objects/Lead/fields/Were_you_able_to_speak_with_client__c.field-meta.xml
<CustomField>
    <fullName>Were_you_able_to_speak_with_client__c</fullName>
    <label>Were you able to speak with client?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No (No Show)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>