force-app/main/default/objects/Lead/fields/What_Type_of_Document_to_Send_Out__c.field-meta.xml
<CustomField>
    <fullName>What_Type_of_Document_to_Send_Out__c</fullName>
    <label>What Type of Document to Send Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Rep Letter</fullName>
            </value>
            <value>
                <fullName>Client(s) Considering Options</fullName>
            </value>
            <value>
                <fullName>PAID CONSULT Closing Letter</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>