force-app/main/default/objects/Lead/fields/Which_type_of_Fee_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Which_type_of_Fee_Agreement__c</fullName>
    <label>Which type of Fee Agreement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGULAR CONSULTATION FEE AND INTAKE ($350)</fullName>
            </value>
            <value>
                <fullName>Hourly Evergreen</fullName>
            </value>
            <value>
                <fullName>Evergreen Transactional</fullName>
            </value>
            <value>
                <fullName>Contingency</fullName>
            </value>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
            <value>
                <fullName>Assigned Defense Counsel (ADC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>