force-app/main/default/objects/Lead/fields/Work_Phone_Custom__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone_Custom__c</fullName>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>