force-app/main/default/objects/Lead/fields/Worked_With_Us_Before__c.field-meta.xml
<CustomField>
    <fullName>Worked_With_Us_Before__c</fullName>
    <label>Have you worked with us before?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>