force-app/main/default/objects/Lead/validationRules/Require_Disqualified_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Disqualified_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Unqualified&quot;),
  ISBLANK(TEXT(Disqualified_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Disqualified_Reason__c</errorDisplayField>
    <errorMessage>You must provide a Disqualified Reason when the Lead Status is Disqualified</errorMessage>
</ValidationRule>