force-app/main/default/objects/Lead/listViews/Copy_of_Today_s_Leads.listView-meta.xml
<ListView>
    <fullName>Copy_of_Today_s_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>Source__c</columns>
    <columns>Lead_Source_Details__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>External_Id__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday&apos;s Leads</label>
</ListView>